<resources>
    <string name="app_name">TuneNeutral</string>
    <string name="title_main">Ratings calendar</string>

    <string name="empty_string">%s</string>

    <string name="rate_title">How you going buddy?</string>
    <string name="epxlain_raiting_title">100 I got Tiger blood 0 This Time Im really going to do it</string>
    <string name="default_rating">Rating: %d</string>
    <string name="date_title">%s : %s</string>
    <string name="login_title">Please Login to Spotify</string>
    <string name="date_today_title">Today! %s</string>
    <string name="neutralise_button">Neutralsze me!</string>
    <string name="playlist_desc">Generated by TuneNeutral. day rating: %d</string>
    <string name="calander_fragment_title">Dates!</string>
    <string name="spotify_failed_login">Failled to login into Spotify</string>
    <string name="no_rating">N/A</string>
    <string name="select_date">Select Date</string>
    <string name="import_database_title">Database received</string>

    <string name="button_spotify_login">Log in with Spotify</string>
    <string name="button_view_playlist">Press to View Playlist!</string>
    <string name="button_rate_today">Press to rate today!</string>

    <string name="loading_pulling_songs">Pulling your top tracks from Spotify</string>
    <string name="loading_anayalsing">Analysing songs</string>
    <string name="loading_calcauting">Calculating which songs you need to feel not happy not sad but just there</string>
    <string name="loading_compelte_playlist">Done check Spotify</string>
    <string name="loading_compelte_no_playlist">Done already feel nothing nice.</string>

    <string name="error_spotify_token_missing">Please Log into spotify first</string>
    <string name="error_cannot_import_database_syntax">Cannot import database syntax error in json!</string>
    <string name="error_cannot_import_database_no_extra">Cannot import database cannot read file</string>

    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apl">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>

    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wen">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>

    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_debug">Enable Debug</string>
    <string name="menu_title_database">Database</string>
    <string name="menu_title_clear_database">Clear Database</string>
    <string name="menu_title_export_database">Export Database</string>
    <string name="menu_title_import_database">Import Database</string>
    <string name="menu_title_pull_songs">Pull Songs</string>
    <string name="menu_version_info">Version Info</string>

    <string name="close">Close</string>
    <string name="Import">Import!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_end_date">Set End Date</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="menu_nav_calendar">Calendar</string>
    <string name="menu_nav_rating">Rating</string>
    <string name="menu_nav_stats">Stats</string>
    <string name="playlist">playlist</string>
    <string name="songs_in_database">Songs In Database</string>
    <string name="music_library">Music Library</string>
    <string name="song_view_title">Title: %s</string>
    <string name="song_view_album_title">Album: %s</string>
    <string name="song_view_artists_title">Artists: %s</string>

    <string name="popularity">Popularity: %s</string>
    <string name="length">Duration: %.2f</string>
    <string name="valence">Valence: %.2f</string>
    <string name="tempo">Tempo: %.2f</string>
    <string name="danceability">Danceability: %.2f</string>
    <string name="energy">Energy: %.2f</string>
    <string name="loudness">Loudness: %.2f</string>
    <string name="key">Key: %d</string>
</resources>
