<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/settings"
        android:title="@string/menu_title_settings"
        android:icon="@drawable/ic_settings_24px"
        >
        <menu>
            <item
                android:id="@+id/enable_debug"
                android:title="@string/menu_title_debug"
                android:checkable="true"
                android:icon="@drawable/ic_bug_report_24px"
                />
        </menu>
    </item>

    <item
        android:id="@+id/database"
        android:title="@string/menu_title_database"
        android:icon="@drawable/ic_settings_24px"
        >
        <menu>
            <item
                android:id="@+id/clear_database"
                android:title="@string/menu_title_clear_database"
                android:icon="@drawable/ic_clear_24px"
                />
            <item
                android:id="@+id/export_database"
                android:title="@string/menu_title_export_database"
                android:icon="@drawable/ic_share_24px"
                />
            <item
                android:id="@+id/import_database"
                android:title="@string/menu_title_import_database"
                />
        </menu>
    </item>

    <item
        android:id="@+id/pull_songs"
        android:title="@string/menu_title_pull_songs"
        android:icon="@drawable/ic_audiotrack_24px"
        />

    <item
        android:id="@+id/version_info"
        android:title="@string/menu_version_info"
        android:icon="@drawable/ic_info_24px"
        />

</menu>