<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_holder"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:text="@string/date_title"
        />

    <TextView
        android:id="@+id/rating_text"
        android:text="@string/default_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/view_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_playlist"
        android:layout_gravity="center"
        android:padding="10sp"
        android:textColor="@android:color/white"
        android:background="@color/colorSpotifyButton"
        />

    <View
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDateViewLineBreak"/>

</LinearLayout>