<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_title"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            />

        <LinearLayout
            android:id="@+id/day_rating_input"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            >

            <TextView
                android:id="@+id/rating_text_view"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_rating"
                />

            <SeekBar
                android:id="@+id/rating_input_seekbar"
                android:max="100"
                android:progress="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Button
            android:id="@+id/neutralise_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/day_rating_input"
            android:layout_centerInParent="true"
            android:text="@string/neutralise_button"
            />

    </RelativeLayout>




</FrameLayout>