<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.daimajia.swipe.SwipeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <!-- Bottom View Start-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            
            <RelativeLayout
                android:id="@+id/info_button"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/colorInfoBackground"
                >

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_info_24px"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/colorMenuIconPrimarySelected"
                    tools:ignore="ContentDescription"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/blacklist_button"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/colorDeleteBackground"
                >

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_delete_24px"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/colorMenuIconPrimarySelected"
                    tools:ignore="ContentDescription"
                    />

            </RelativeLayout>

        </LinearLayout>
        <!-- Bottom View End-->

        <!-- Surface View Start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            >

            <TextView
                android:id="@+id/pos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:text="100"
                />

            <ProgressBar
                android:id="@+id/song_cover_loading_bar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:id="@+id/song_cover"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="20dp"
                android:src="@drawable/no_cover_found"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/song_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_view_title"
                    android:textSize="23sp"
                    />

                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_view_album_title"
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/artists_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_view_artists_title"
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>

    <View
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDateViewLineBreak"
        />

</LinearLayout>